@@ -40,11 +40,11 @@
 
 uint32_t         Timer_interrupts;
 
-rtems_boolean benchmark_timerfind_average_overhead;
+rtems_boolean benchmark_timer_find_average_overhead;
 
 rtems_isr timerisr(void);
 
-void benchmark_timerinitialize( void )
+void benchmark_timer_initialize( void )
 {
     m302.reg.tmr2 = 0;			/* disable timer */
 
@@ -56,7 +56,7 @@ void benchmark_timerinitialize( void )
 }
 
 /*
- *  The following controls the behavior of benchmark_timerread().
+ *  The following controls the behavior of benchmark_timer_read().
  *
  *  FIND_AVG_OVERHEAD *  instructs the routine to return the "raw" count.
  *
@@ -75,7 +75,7 @@ void benchmark_timerinitialize( void )
 /*
  * Return timer value in 1/2-microsecond units
  */
-int benchmark_timerread( void )
+int benchmark_timer_read( void )
 {
   uint16_t         clicks;
   uint32_t         total;
@@ -95,7 +95,7 @@ int benchmark_timerread( void )
 
   total = (Timer_interrupts * TRR2_VAL) + clicks;
 
-  if ( benchmark_timerfind_average_overhead == 1 )
+  if ( benchmark_timer_find_average_overhead == 1 )
     return total;          /* in XXX microsecond units */
 
   if ( total < LEAST_VALID )
@@ -108,19 +108,9 @@ int benchmark_timerread( void )
   return (total - AVG_OVERHEAD) >> 1;
 }
 
-/*
- *  Empty function call used in loops to measure basic cost of looping
- *  in Timing Test Suite.
- */
-
-rtems_status_code benchmark_timerempty_function(void)
-{
-    return RTEMS_SUCCESSFUL;
-}
-
-void benchmark_timerdisable_subtracting_average_overhead(
+void benchmark_timer_disable_subtracting_average_overhead(
   rtems_boolean find_flag
 )
 {
-  benchmark_timerfind_average_overhead = find_flag;
+  benchmark_timer_find_average_overhead = find_flag;
 }
