@@ -1,5 +1,10 @@
 2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>
 
+	* timer/timer.c, timer/timerisr.S: Eliminate empty function from every
+	benchmark timer driver. Fix spelling.
+
+2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>
+
 	* timer/timer.c, timer/timerisr.S: Rename timer driver methods to
 	follow RTEMS programming conventions.
 
